Fix 'See my Paintings' on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,8 +45,10 @@ section {
 nav {
   width: 100%;
   position: fixed;
-  top: 20px;
+  padding-top: 20px;
+  padding-bottom: 80px;
   z-index: 5;
+  background: linear-gradient($bgColor, rgba(0, 0, 0, 0));
 
   ul {
     display: flex;
@@ -231,6 +233,15 @@ nav {
     border: 1px solid $lightgrey;
     border-radius: 400px;
 
+    .eye {
+      stroke-width: 15;
+      stroke: $bgColor;
+      fill: $lightgrey;
+      opacity: 0.2;
+      position: absolute;
+      width: 80%;
+    }
+
     a {
       position: relative;
       text-align: center;
@@ -256,14 +267,6 @@ nav {
         object-fit: contain;
         width: 100%;
       }
-    }
-
-    &::after {
-      content: url(./svg/eye.svg);
-      opacity: 20%;
-      width: 70%;
-      position: absolute;
-      z-index: 0;
     }
 
     &:hover {
@@ -443,6 +446,8 @@ nav {
       display: block;
 
       .socmed {
+        margin-top: 1rem;
+
         svg {
           margin-left: 0;
         }
@@ -494,14 +499,11 @@ nav {
       margin-bottom: 2rem;
 
       a {
-        font-size: 2rem;
+        font-size: 1.8rem;
         text-align: center;
       }
 
       .slideshow {
-        position: fixed;
-        left: 0;
-        top: -500px;
         display: none;
       }
     }
